--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
+
 }
 
 dependencies {
@@ -41,7 +35,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.android.volley:dc-volley:1.1.0'
+    implementation 'com.android.volley:volley:1.1.1'
     kapt 'androidx.room:room-compiler:2.3.0-alpha03'
     implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'androidx.room:room-runtime:2.3.0-alpha03'
