--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,48 +5,82 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-
-        <activity android:name=".Alumno.MainActivity_Alumno_Ajustes" android:screenOrientation="portrait"/>
-        <activity android:name=".Alumno.MainActivity_Alumno_Grupos" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_ajustes" android:screenOrientation="portrait"/>
-        <activity android:name=".ControlParental.MainActivityControlParental_NiveldeConocimiento" android:screenOrientation="portrait"/>
-        <activity android:name=".ControlParental.MainActivityControlParental_Asistencia" android:screenOrientation="portrait"/>
-        <activity android:name=".ControlParental.MainActivityControlParental_Calificaciones" android:screenOrientation="portrait"/>
-        <activity android:name=".ControlParental.MainActivityControlParental" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_edicioncquiz" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_creacioncquiz" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_creacionmemorama" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_trabajos" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_boleta" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro_alumnos" android:screenOrientation="portrait"/>
-        <activity android:name=".Profesor.activity_main_maestro" android:screenOrientation="portrait"/>
-        <activity android:name=".Alumno.MainActivity_Alumno_Actividades" android:screenOrientation="portrait"/>
-        <activity android:name=".Alumno.MainActivity_Alumno" android:screenOrientation="portrait"/>
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Alumno.MainActivity_Alumno_CQuiz"></activity>
+        <activity
+            android:name=".Alumno.MainActivity_Alumno_Ajustes"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Alumno.MainActivity_Alumno_Grupos"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_ajustes"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ControlParental.MainActivityControlParental_NiveldeConocimiento"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ControlParental.MainActivityControlParental_Asistencia"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ControlParental.MainActivityControlParental_Calificaciones"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ControlParental.MainActivityControlParental"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_edicioncquiz"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_creacioncquiz"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_creacionmemorama"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_trabajos"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_boleta"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro_alumnos"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Profesor.activity_main_maestro"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Alumno.MainActivity_Alumno_Actividades"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Alumno.MainActivity_Alumno"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" android:screenOrientation="portrait" />
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait" />
 
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
     </application>
 
 </manifest>
